# curvereduce-py

./: .flake8  .pre-commit-config.yaml  .pylintrc  CODEOWNERS  Pipfile  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  pypi.yml  testpypi.yml
__tests__/unit/: test_binary_search.py  test_max_distance.py  test_perpendicular_distance.py  test_point_distance_squared.py  test_shortest_distance.py  test_simplify_curve.py  test_simplify_curve_to.py
curvereduce/: __init__.py
